@@ -3,8 +3,8 @@ import * as firebase from 'firebase';
 var rolldice = require("./Roll.js");
 const channel = window.location.pathname.slice(1).toLowerCase(),
       user = window.location.search.slice(1);
-
 function reRoll(message) {
+  let roll = {}
   Popup.create({
   title: 'ReRoll',
   content: 'What would like to do to with this roll',
@@ -14,10 +14,12 @@ function reRoll(message) {
           text: 'Roll Same Pool',
           className: 'ReRoll',
           action: () => {
-            sameDice(message)
+            roll = sameDice(message)
+            firebase.database().ref().child(`${channel}`).child('message').push().set(roll);
+
             Popup.close();
           }
-        }, {
+        }/*, {
           text: 'Add Dice',
           className: 'ReRoll',
           action: () => {
@@ -29,7 +31,8 @@ function reRoll(message) {
             action: () => {
               Popup.close();
             }
-        }],
+        }
+        */]/*,
       right: [{
             text: 'ReRoll Select Dice',
             className: 'ReRoll',
@@ -48,7 +51,7 @@ function reRoll(message) {
           action: () => {
             Popup.close();
           }
-      }]
+      }]*/
   }});
 }
 
@@ -60,9 +63,8 @@ function sameDice(message) {
   });
   let polyhedral = 0, caption = '';
   if (message.polyhedral !== undefined) polyhedral = message.polyhedral[0][0];
-  if (message.caption !== undefined) polyhedral = message.caption;
-  let roll = rolldice.roll(diceRoll, polyhedral, caption, user);
-  console.log(roll); 
+  if (message.caption !== undefined) caption = message.caption;
+  return rolldice.roll(diceRoll, polyhedral, caption, user);
 }
 module.exports = {
   reRoll: reRoll,
