@@ -1,3 +1,4 @@
+  -reroll samepoll finished
   -modulized Roll.js
   -reformat work to get ready for rerolls
   -added 'All dice have cancelled out' message
